# typetone-engineering-assessment

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml  setup.sh  test.db  test_crud.db
alembic/: env.py
alembic/versions/: a737043ea658_add_last_redirect_and_redirect_count_.py  fdfd44639dde_initial_migration.py
app/: __init__.py  crud.py  database.py  init_db.py  main.py  models.py  schemas.py  utils.py
tests/: test_crud.py  test_main.py  test_main_async.py  test_utils.py
